--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,5 +41,8 @@ dependencies {
     // google.services.json file in the app folder. After syncing the changes, you should be able
     // to send a notification to your app using the Firebase console. The app must be in the
     // background!
+    compile 'com.google.firebase:firebase-core:16.0.0'
 
 }
+
+apply plugin: 'com.google.gms.google-services'
