--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,6 @@ buildscript {
         google()
     }
     dependencies {
-        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.2'
         classpath 'com.android.tools.build:gradle:3.1.3'
 
         // Google Services plugin
@@ -20,6 +19,7 @@ buildscript {
 allprojects {
     repositories {
         jcenter()
+        google()  // Google's Maven Repo
     }
 }
 
